write render_file() shortcut

--- a/testproject/templates/repo_browse_file.html
+++ b/testproject/templates/repo_browse_file.html
@@ -3,7 +3,7 @@
     <title>{{ repo.name }}</title>
   </head>
   <body>
-    <h2>Contents of {{ path }}</h2>
+    <h2>Contents of {{ path }} @ {{ rev }}</h2>
     {% if contents %}
       <pre>{{ contents }}</pre>
     {% else %}
